[tool.poetry]
name = "repl_python3_Python-Selenium-Tutorial"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.0.0"
Flask = "^2.2.2"
yt-dlp = "^2023.1.6"
easy-playlist = "^1.3.3"
json-minify = "^0.3.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
